parser/cql3_parser.go
// Code generated from CQL3.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // CQL3

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "';'", "'('", "')'", "','", "'='", "'+'", "'-'", "'['", "']'", "'?'",
	"'.'", "':'", "'{'", "'}'", "'ascii'", "'bigint'", "'blob'", "'boolean'",
	"'counter'", "'decimal'", "'double'", "'float'", "'inet'", "'int'", "'text'",
	"'timestamp'", "'timeuuid'", "'uuid'", "'varchar'", "'varint'", "'list'",
	"'<'", "'>'", "'set'", "'map'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"K_ADD", "K_ALTER", "K_AND", "K_APPLY", "K_BATCH", "K_BEGIN", "K_CLUSTERING",
	"K_COLUMNFAMILY", "K_COMPACT", "K_COUNTER", "K_CREATE", "K_CUSTOM", "K_DELETE",
	"K_DROP", "K_EXISTS", "K_FALSE", "K_FROM", "K_IF", "K_IN", "K_INDEX", "K_INSERT",
	"K_INTO", "K_KEY", "K_KEYSPACE", "K_NOT", "K_ON", "K_OPTIONS", "K_ORDER",
	"K_PRIMARY", "K_SELECT", "K_SET", "K_STATIC", "K_STORAGE", "K_TABLE", "K_TIMESTAMP",
	"K_TRUE", "K_TRUNCATE", "K_TTL", "K_TYPE", "K_UNLOGGED", "K_UPDATE", "K_USE",
	"K_USING", "K_VALUES", "K_WHERE", "K_WITH", "IDENTIFIER", "STRING", "INTEGER",
	"FLOAT", "UUID", "BLOB", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "WS",
}

var ruleNames = []string{
	"statements", "statement", "dml_statements", "dml_statement", "create_keyspace_stmt",
	"alter_keyspace_stmt", "drop_keyspace_stmt", "use_stmt", "create_table_stmt",
	"alter_table_stmt", "alter_table_instruction", "drop_table_stmt", "truncate_table_stmt",
	"create_index_stmt", "drop_index_stmt", "insert_stmt", "column_names",
	"column_values", "upsert_options", "upsert_option", "index_name", "index_class",
	"index_options", "update_stmt", "update_assignments", "update_assignment",
	"update_conditions", "update_condition", "where_clause", "relation", "delete_stmt",
	"delete_conditions", "delete_condition", "delete_selections", "delete_selection",
	"batch_stmt", "batch_options", "batch_option", "table_name", "column_name",
	"table_options", "table_option", "column_definitions", "column_definition",
	"column_type", "primary_key", "partition_key", "keyspace_name", "if_not_exists",
	"if_exists", "constant", "variable", "term", "collection", "r_map", "set",
	"list", "function", "properties", "property", "property_name", "property_value",
	"data_type", "native_type", "collection_type", "r_bool",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type CQL3Parser struct {
	*antlr.BaseParser
}

func NewCQL3Parser(input antlr.TokenStream) *CQL3Parser {
	this := new(CQL3Parser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "CQL3.g4"

	return this
}

// CQL3Parser tokens.
const (
	CQL3ParserEOF                 = antlr.TokenEOF
	CQL3ParserT__0                = 1
	CQL3ParserT__1                = 2
	CQL3ParserT__2                = 3
	CQL3ParserT__3                = 4
	CQL3ParserT__4                = 5
	CQL3ParserT__5                = 6
	CQL3ParserT__6                = 7
	CQL3ParserT__7                = 8
	CQL3ParserT__8                = 9
	CQL3ParserT__9                = 10
	CQL3ParserT__10               = 11
	CQL3ParserT__11               = 12
	CQL3ParserT__12               = 13
	CQL3ParserT__13               = 14
	CQL3ParserT__14               = 15
	CQL3ParserT__15               = 16
	CQL3ParserT__16               = 17
	CQL3ParserT__17               = 18
	CQL3ParserT__18               = 19
	CQL3ParserT__19               = 20
	CQL3ParserT__20               = 21
	CQL3ParserT__21               = 22
	CQL3ParserT__22               = 23
	CQL3ParserT__23               = 24
	CQL3ParserT__24               = 25
	CQL3ParserT__25               = 26
	CQL3ParserT__26               = 27
	CQL3ParserT__27               = 28
	CQL3ParserT__28               = 29
	CQL3ParserT__29               = 30
	CQL3ParserT__30               = 31
	CQL3ParserT__31               = 32
	CQL3ParserT__32               = 33
	CQL3ParserT__33               = 34
	CQL3ParserT__34               = 35
	CQL3ParserK_ADD               = 36
	CQL3ParserK_ALTER             = 37
	CQL3ParserK_AND               = 38
	CQL3ParserK_APPLY             = 39
	CQL3ParserK_BATCH             = 40
	CQL3ParserK_BEGIN             = 41
	CQL3ParserK_CLUSTERING        = 42
	CQL3ParserK_COLUMNFAMILY      = 43
	CQL3ParserK_COMPACT           = 44
	CQL3ParserK_COUNTER           = 45
	CQL3ParserK_CREATE            = 46
	CQL3ParserK_CUSTOM            = 47
	CQL3ParserK_DELETE            = 48
	CQL3ParserK_DROP              = 49
	CQL3ParserK_EXISTS            = 50
	CQL3ParserK_FALSE             = 51
	CQL3ParserK_FROM              = 52
	CQL3ParserK_IF                = 53
	CQL3ParserK_IN                = 54
	CQL3ParserK_INDEX             = 55
	CQL3ParserK_INSERT            = 56
	CQL3ParserK_INTO              = 57
	CQL3ParserK_KEY               = 58
	CQL3ParserK_KEYSPACE          = 59
	CQL3ParserK_NOT               = 60
	CQL3ParserK_ON                = 61
	CQL3ParserK_OPTIONS           = 62
	CQL3ParserK_ORDER             = 63
	CQL3ParserK_PRIMARY           = 64
	CQL3ParserK_SELECT            = 65
	CQL3ParserK_SET               = 66
	CQL3ParserK_STATIC            = 67
	CQL3ParserK_STORAGE           = 68
	CQL3ParserK_TABLE             = 69
	CQL3ParserK_TIMESTAMP         = 70
	CQL3ParserK_TRUE              = 71
	CQL3ParserK_TRUNCATE          = 72
	CQL3ParserK_TTL               = 73
	CQL3ParserK_TYPE              = 74
	CQL3ParserK_UNLOGGED          = 75
	CQL3ParserK_UPDATE            = 76
	CQL3ParserK_USE               = 77
	CQL3ParserK_USING             = 78
	CQL3ParserK_VALUES            = 79
	CQL3ParserK_WHERE             = 80
	CQL3ParserK_WITH              = 81
	CQL3ParserIDENTIFIER          = 82
	CQL3ParserSTRING              = 83
	CQL3ParserINTEGER             = 84
	CQL3ParserFLOAT               = 85
	CQL3ParserUUID                = 86
	CQL3ParserBLOB                = 87
	CQL3ParserSINGLE_LINE_COMMENT = 88
	CQL3ParserMULTILINE_COMMENT   = 89
	CQL3ParserWS                  = 90
)

// CQL3Parser rules.
const (
	CQL3ParserRULE_statements              = 0
	CQL3ParserRULE_statement               = 1
	CQL3ParserRULE_dml_statements          = 2
	CQL3ParserRULE_dml_statement           = 3
	CQL3ParserRULE_create_keyspace_stmt    = 4
	CQL3ParserRULE_alter_keyspace_stmt     = 5
	CQL3ParserRULE_drop_keyspace_stmt      = 6
	CQL3ParserRULE_use_stmt                = 7
	CQL3ParserRULE_create_table_stmt       = 8
	CQL3ParserRULE_alter_table_stmt        = 9
	CQL3ParserRULE_alter_table_instruction = 10
	CQL3ParserRULE_drop_table_stmt         = 11
	CQL3ParserRULE_truncate_table_stmt     = 12
	CQL3ParserRULE_create_index_stmt       = 13
	CQL3ParserRULE_drop_index_stmt         = 14
	CQL3ParserRULE_insert_stmt             = 15
	CQL3ParserRULE_column_names            = 16
	CQL3ParserRULE_column_values           = 17
	CQL3ParserRULE_upsert_options          = 18
	CQL3ParserRULE_upsert_option           = 19
	CQL3ParserRULE_index_name              = 20
	CQL3ParserRULE_index_class             = 21
	CQL3ParserRULE_index_options           = 22
	CQL3ParserRULE_update_stmt             = 23
	CQL3ParserRULE_update_assignments      = 24
	CQL3ParserRULE_update_assignment       = 25
	CQL3ParserRULE_update_conditions       = 26
	CQL3ParserRULE_update_condition        = 27
	CQL3ParserRULE_where_clause            = 28
	CQL3ParserRULE_relation                = 29
	CQL3ParserRULE_delete_stmt             = 30
	CQL3ParserRULE_delete_conditions       = 31
	CQL3ParserRULE_delete_condition        = 32
	CQL3ParserRULE_delete_selections       = 33
	CQL3ParserRULE_delete_selection        = 34
	CQL3ParserRULE_batch_stmt              = 35
	CQL3ParserRULE_batch_options           = 36
	CQL3ParserRULE_batch_option            = 37
	CQL3ParserRULE_table_name              = 38
	CQL3ParserRULE_column_name             = 39
	CQL3ParserRULE_table_options           = 40
	CQL3ParserRULE_table_option            = 41
	CQL3ParserRULE_column_definitions      = 42
	CQL3ParserRULE_column_definition       = 43
	CQL3ParserRULE_column_type             = 44
	CQL3ParserRULE_primary_key             = 45
	CQL3ParserRULE_partition_key           = 46
	CQL3ParserRULE_keyspace_name           = 47
	CQL3ParserRULE_if_not_exists           = 48
	CQL3ParserRULE_if_exists               = 49
	CQL3ParserRULE_constant                = 50
	CQL3ParserRULE_variable                = 51
	CQL3ParserRULE_term                    = 52
	CQL3ParserRULE_collection              = 53
	CQL3ParserRULE_r_map                   = 54
	CQL3ParserRULE_set                     = 55
	CQL3ParserRULE_list                    = 56
	CQL3ParserRULE_function                = 57
	CQL3ParserRULE_properties              = 58
	CQL3ParserRULE_property                = 59
	CQL3ParserRULE_property_name           = 60
	CQL3ParserRULE_property_value          = 61
	CQL3ParserRULE_data_type               = 62
	CQL3ParserRULE_native_type             = 63
	CQL3ParserRULE_collection_type         = 64
	CQL3ParserRULE_r_bool                  = 65
)

// IStatementsContext is an interface to support dynamic dispatch.
type IStatementsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementsContext differentiates from other interfaces.
	IsStatementsContext()
}

type StatementsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementsContext() *StatementsContext {
	var p = new(StatementsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CQL3ParserRULE_statements
	return p
}

func (*StatementsContext) IsStatementsContext() {}

func NewStatementsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementsContext {
	var p = new(StatementsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CQL3ParserRULE_statements

	return p
}

func (s *StatementsContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementsContext) AllStatement() []IStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatementContext)(nil)).Elem())
	var tst = make([]IStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatementContext)
		}
	}

	return tst
}

func (s *StatementsContext) Statement(i int) IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *StatementsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CQL3Listener); ok {
		listenerT.EnterStatements(s)
	}
}

func (s *StatementsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CQL3Listener); ok {
		listenerT.ExitStatements(s)
	}
}

func (p *CQL3Parser) Statements() (localctx IStatementsContext) {
	localctx = NewStatementsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, CQL3ParserRULE_statements)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(132)
		p.Statement()
	}
	p.SetState(141)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			p.SetState(134)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			for ok := true; ok; ok = _la == CQL3ParserT__0 {
				{
					p.SetState(133)
					p.Match(CQL3ParserT__0)
				}

				p.SetState(136)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			{
				p.SetState(138)
				p.Statement()
			}

		}
		p.SetState(143)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())
	}
	p.SetState(145)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == CQL3ParserT__0 {
		{
			p.SetState(144)
			p.Match(CQL3ParserT__0)
		}

		p.SetState(147)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CQL3ParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CQL3ParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Drop_keyspace_stmt() IDrop_keyspace_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDrop_keyspace_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDrop_keyspace_stmtContext)
}

func (s *StatementContext) Create_keyspace_stmt() ICreate_keyspace_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreate_keyspace_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreate_keyspace_stmtContext)
}

func (s *StatementContext) Alter_keyspace_stmt() IAlter_keyspace_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAlter_keyspace_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAlter_keyspace_stmtContext)
}

func (s *StatementContext) Use_stmt() IUse_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUse_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUse_stmtContext)
}

func (s *StatementContext) Create_table_stmt() ICreate_table_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreate_table_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreate_table_stmtContext)
}

func (s *StatementContext) Alter_table_stmt() IAlter_table_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAlter_table_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAlter_table_stmtContext)
}

func (s *StatementContext) Drop_table_stmt() IDrop_table_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDrop_table_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDrop_table_stmtContext)
}

func (s *StatementContext) Truncate_table_stmt() ITruncate_table_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITruncate_table_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITruncate_table_stmtContext)
}

func (s *StatementContext) Create_index_stmt() ICreate_index_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreate_index_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreate_index_stmtContext)
}

func (s *StatementContext) Drop_index_stmt() IDrop_index_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDrop_index_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDrop_index_stmtContext)
}

func (s *StatementContext) Insert_stmt() IInsert_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IInsert_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IInsert_stmtContext)
}

func (s *StatementContext) Update_stmt() IUpdate_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUpdate_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUpdate_stmtContext)
}

func (s *StatementContext) Delete_stmt() IDelete_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDelete_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDelete_stmtContext)
}

func (s *StatementContext) Batch_stmt() IBatch_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBatch_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBatch_stmtContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CQL3Listener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CQL3Listener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *CQL3Parser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, CQL3ParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(163)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(149)
			p.Drop_keyspace_stmt()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(150)
			p.Create_keyspace_stmt()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(151)
			p.Alter_keyspace_stmt()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(152)
			p.Use_stmt()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(153)
			p.Create_table_stmt()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(154)
			p.Alter_table_stmt()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(155)
			p.Drop_table_stmt()
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(156)
			p.Truncate_table_stmt()
		}

	case 9:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(157)
			p.Create_index_stmt()
		}

	case 10:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(158)
			p.Drop_index_stmt()
		}

	case 11:
		p.EnterOuterAlt(localctx, 11)
		{
			p.SetState(159)
			p.Insert_stmt()
		}

	case 12:
		p.EnterOuterAlt(localctx, 12)
		{
			p.SetState(160)
			p.Update_stmt()
		}

	case 13:
		p.EnterOuterAlt(localctx, 13)
		{
			p.SetState(161)
			p.Delete_stmt()
		}
